@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2767609 by drunken monkey, borisson_: Added backend tests for empty value
+  conditions.
 - #2789431 by phenaproxima, drunken monkey: Added possibility to display
   processor-generated fields in Views.
 - #2822553 by niko-: Removed a test assertion that failed when run via GUI.
